# panha-audio-metadata

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: test-plan.md
panha/: __init__.py  __main__.py  app.py  main_window.py  mastering.py  templates.py
panha/dialogs/: __init__.py  ai_detector_dialog.py  config_dialog.py  export_settings_dialog.py  file_info_dialog.py
panha/metadata/: __init__.py  ffmpeg_writer.py
panha/ui/: __init__.py  styles.py
panha/widgets/: __init__.py  mastering.py  system_stats.py  transport.py  waveform.py  worker.py
tests/: conftest.py  test_mastering.py  test_metadata_writer.py  test_templates.py  test_ui_smoke.py  test_worker.py
